--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <button id="saludar">apachurrale</button>
+<body>        
+        <label>nombre</label>
+        <br/>
+        <input id="lblsend" name="firstname" type="text" placeholder="first name"/>
+        <input type="submit" id="btnsend">
+    
     <script src="./main.js"></script>
 </body>
 </html>
